<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">N-puzzle6182097</string>
    
	<string name="scoreboard">Scoreboard</string>
	<string name="play">Play</string>
	<string name="settings"> Settings</string>
	<string name="resume"> Resume</string>
	
	<string name="custom_width"> Custom Width</string>
	<string name="custom_height"> Custom Height</string>
	
	<string name="image"> Image</string>
	<string name="back"> Another Image</string>
	
	<string name="easy"> 3 * 3</string>
	<string name="medium"> 4 * 4</string>
	<string name="hard"> 5 * 5</string>
	<string name="custom"> Custom</string>
	
	<string name="ok"> OK </string>
	
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
