<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.mprog.N_puzzle6182097.MainActivity" >

	<item 
		android:id="@+id/picList"
		android:title="@string/back"
		android:icon="@android:drawable/ic_menu_compass" />
	<item 
		android:id="@+id/easy"
		android:title="@string/easy"
		android:icon="@android:drawable/ic_menu_directions" />
	<item 
		android:id="@+id/medium"
		android:title="@string/medium"
		android:icon="@android:drawable/ic_menu_help" />
	<item 
		android:id="@+id/hard"
		android:title="@string/hard"
		android:icon="@android:drawable/ic_menu_delete" />
	<item 
		android:id="@+id/mainMenu"
		android:title="@string/custom"
		android:icon="@android:drawable/ic_menu_myplaces" />

</menu>
