<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SeekBar
        android:id="@+id/seekBar_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp" 
        android:max="5"/>

    <SeekBar
        android:id="@+id/seekBar_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar_width"
        android:layout_marginTop="62dp" 
        android:max="5"/>

    <TextView
        android:id="@+id/custom_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar_width"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/custom_width" />

    <TextView
        android:id="@+id/custom_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_width"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/custom_height" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/ok" 
        android:onClick="backToMenu"/>

</RelativeLayout>
